--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,7 @@ target_link_libraries(kasync_kitchensink Threads::Threads Qt5::Core KAsync)
 
 add_executable(qfuture_kitchensink qfuture_kitchensink.cpp)
 target_link_libraries(qfuture_kitchensink Threads::Threads Qt5::Core)
+
+include_directories(qtpromise/include)
+add_executable(qpromise_kitchensink qpromise_kitchensink.cpp)
+target_link_libraries(qpromise_kitchensink Threads::Threads Qt5::Core)
