Add AsyncFuture kitchensink

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "qtpromise"]
 	path = qtpromise
 	url = https://github.com/simonbrunel/qtpromise.git
+[submodule "asyncfuture"]
+	path = asyncfuture
+	url = https://github.com/benlau/asyncfuture.git
