--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,7 @@ target_link_libraries(qfuture_kitchensink Threads::Threads Qt5::Core)
 include_directories(qtpromise/include)
 add_executable(qpromise_kitchensink qpromise_kitchensink.cpp)
 target_link_libraries(qpromise_kitchensink Threads::Threads Qt5::Core)
+
+include_directories(asyncfuture)
+add_executable(asyncfuture_kitchensink asyncfuture_kitchensink.cpp)
+target_link_libraries(asyncfuture_kitchensink Threads::Threads Qt5::Core)
